--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,8 @@
 	<classpathentry kind="lib" path="lib-depends/jetty/jetty-security-9.3.5.v20151012.jar"/>
 	<classpathentry kind="lib" path="lib-depends/jsch/jsch-0.1.51.jar"/>
 	<classpathentry kind="lib" path="lib-depends/apache.net/commons-net-3.4.jar"/>
+	<classpathentry kind="lib" path="lib-depends/jgit/org.eclipse.jgit-4.3.1.201605051710-r.jar"/>
+	<classpathentry kind="lib" path="lib-depends/slf4j/slf4j-api-1.7.21.jar"/>
+	<classpathentry kind="lib" path="lib-depends/slf4j/slf4j-nop-1.7.21.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
