--- a/.classpath
+++ b/.classpath
@@ -34,5 +34,6 @@
 	<classpathentry kind="lib" path="lib-depends/jetty/http2/http2-hpack-9.3.5.v20151012.jar"/>
 	<classpathentry kind="lib" path="lib-depends/jetty/http2/http2-server-9.3.5.v20151012.jar"/>
 	<classpathentry kind="lib" path="lib-depends/jetty/jetty-alpn-server-9.3.5.v20151012.jar"/>
+	<classpathentry kind="lib" path="lib-depends/apache.shiro/shiro-all-1.3.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
